fixed unspecified field
